--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 			</div>
 			<div class = "container">
 				<div class = "home_image" id = "main_index">
-					<img src="images/photo1.jpg" id = "polo" alt = "Harrison headshot">
+					<img src="images/photo4.jpg" id = "suit" alt = "Harrison headshot">
 				</div>
 				<div class="home_text">
-					<p id="welcome">Welcome to my website!</p>
-					<p id="summary1">I am a junior at the University of Michigan studying data science.</p>
-					<p id="summary2">I combine three years of backend practical programming experience in Python, C++, SQL and R with one year of frontend website development in HTML5, CSS, JavaScript, JQuery, PHP and Tableau. I am also skilled in collaborative work via Git and Github.</p>
-					<p id="summary3">I have a long background in public speaking and communication, gained by competing nationally in policy debate for 8 years.</p>
+					<p id="welcome">Welcome to my website!</p><br>
+					<p id="summary1">I am a junior at the University of Michigan studying data science.</p><br>
+					<p id="summary2">I combine three years of backend practical programming experience in Python, C++, SQL and R with one year of frontend website development in HTML5, CSS, JavaScript, JQuery, PHP and Tableau. I am also skilled in collaborative work via Git and Github.</p><br>
+					<p id="summary3">I have a long background in public speaking and communication, gained by competing nationally in policy debate for 8 years.</p><br>
 				</div>
 			</div>
 			<footer>
