--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,6 @@
 
 	<body>
 	    <div class="skip"><a href="#main_index">Skip to Main Content</a></div>
-	    <div class="wrapper">
 				<div class = "nav">
 					<header id="main">
 							<h1>Harrison Hall</h1>
@@ -28,11 +27,11 @@
 				</div>
 				<div class = "container">
 					<div class = "contact_image" id = "main_index">
-						<img src="images/photo4.jpg" id = "suit" alt = "Harrison in a suit">
+						<img src="images/photo1.jpg" id = "polo" alt = "Harrison in a polo shirt">
 					</div>
 
 					<div class="emails">
-						<p class="info_labels">Email</p>
+						<p id="email_lb">Email</p>
 						<p id="email1"> HarrisonJosephHall (at) gmail (dot) com</p>
 						<p id="email2"> HarrHall (at) umich (dot) edu</p>
 					</div>
@@ -53,7 +52,6 @@
 					  </form>
 					</div>
 				</div>
-			</div>
 
 	    <footer>
 				<div id="footer">
