--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 	</head>
 	<body>
 	<div class="skip"><a href="#main_index">Skip to Main Content</a></div>
-	<div class="wrapper">
 			<div class = "nav">
 				<header id="main">
 						<h1>Harrison Hall</h1>
-						<h2 class="description">Full Stack Developer | Student - University of Michigan</h2>
+						<h2>Full Stack Developer | Student - University of Michigan</h2>
 				</header>
 				<nav>
 					<ul>
@@ -44,6 +43,5 @@
 					</div>
 				</div>
 			</footer>
-		</div>
 	</body>
 </html>
