--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 				<div class = "nav">
 					<header id="main">
 							<h1>Harrison Hall</h1>
-							<h2 class="description">Full Stack Developer, Student - University of Michigan</h2>
+							<h2 class="description">Full Stack Developer | Student - University of Michigan</h2>
 					</header>
 					<nav>
 						<ul>
@@ -26,16 +26,14 @@
 					</nav>
 				</div>
 				<div class = "container">
-					<div class = "contact_image" id = "main_index">
+					<div class = "contact_image">
 						<img src="images/photo1.jpg" id = "polo" alt = "Harrison in a polo shirt">
 					</div>
 
-					<div class="emails">
+					<div class="contact_info">
 						<p id="email_lb">Email</p>
 						<p id="email1"> HarrisonJosephHall (at) gmail (dot) com</p>
 						<p id="email2"> HarrHall (at) umich (dot) edu</p>
-					</div>
-					<div class="linked">
 						<p>View my LinkedIn profile <a href="https://www.linkedin.com/in/harrison-hall-4a84a8179" target="_blank" rel="noopener">here</a>.</p>
 					</div>
 
