Last updates of night

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	</head>
 	<body>
 	<div class="skip"><a href="#main_index">Skip to Main Content</a></div>
-			<div class = "nav">
+	<div class = "container">
+			<div class = "top_bar">
 				<header id="main">
 						<h1>Harrison Hall</h1>
 						<h2>Full Stack Developer | Student - University of Michigan</h2>
@@ -24,8 +25,7 @@
 					</ul>
 				</nav>
 			</div>
-			<div class = "container">
-				<div class = "home_image" id = "main_index">
+				<div class = "home_image">
 					<img src="images/photo4.jpg" id = "suit" alt = "Harrison headshot">
 				</div>
 				<div class="home_text">
@@ -34,7 +34,6 @@
 					<p id="summary2">I combine three years of backend practical programming experience in Python, C++, SQL and R with one year of frontend website development in HTML5, CSS, JavaScript, JQuery, PHP and Tableau. I am also skilled in collaborative work via Git and Github.</p><br>
 					<p id="summary3">I have a long background in public speaking and communication, gained by competing nationally in policy debate for 8 years.</p><br>
 				</div>
-			</div>
 			<footer>
 				<div id="footer">
 					<div class="footer_container">
@@ -43,5 +42,6 @@
 					</div>
 				</div>
 			</footer>
+		</div>
 	</body>
 </html>
