--- a/contact.html
+++ b/contact.html
@@ -10,45 +10,45 @@
 	</head>
 
 	<body>
-	    <div class="skip"><a href="#main_index">Skip to Main Content</a></div>
-				<div class = "nav">
-					<header id="main">
-							<h1>Harrison Hall</h1>
-							<h2 class="description">Full Stack Developer | Student - University of Michigan</h2>
-					</header>
-					<nav>
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="Resume_Harrison_Hall.pdf">CV</a></li>
-							<li><a href="projects.html">Projects</a></li>
-							<li><a href="contact.html" class = "active">Contact</a></li>
-						</ul>
-					</nav>
+	<div class="skip"><a href="#main_index">Skip to Main Content</a></div>
+	<div class = "container">
+			<div class = "top_bar">
+				<header id="main">
+						<h1>Harrison Hall</h1>
+						<h2>Full Stack Developer | Student - University of Michigan</h2>
+				</header>
+				<nav>
+					<ul>
+						<li><a href="index.html" class = "active">Home</a></li>
+						<li><a href="Resume_Harrison_Hall.pdf">CV</a></li>
+						<li><a href="projects.html">Projects</a></li>
+						<li><a href="contact.html">Contact</a></li>
+					</ul>
+				</nav>
+			</div>
+				
+				<div class = "contact_image">
+					<img src="images/photo1.jpg" id = "polo" alt = "Harrison in a polo shirt">
 				</div>
-				<div class = "container">
-					<div class = "contact_image">
-						<img src="images/photo1.jpg" id = "polo" alt = "Harrison in a polo shirt">
-					</div>
 
-					<div class="contact_info">
-						<p id="email_lb">Email</p>
-						<p id="email1"> HarrisonJosephHall (at) gmail (dot) com</p>
-						<p id="email2"> HarrHall (at) umich (dot) edu</p>
-						<p>View my LinkedIn profile <a href="https://www.linkedin.com/in/harrison-hall-4a84a8179" target="_blank" rel="noopener">here</a>.</p>
-					</div>
+				<div class="contact_info">
+					<p id="email_lb">Email</p>
+					<p id="email1"> HarrisonJosephHall (at) gmail (dot) com</p>
+					<p id="email2"> HarrHall (at) umich (dot) edu</p>
+					<p>View my LinkedIn profile <a href="https://www.linkedin.com/in/harrison-hall-4a84a8179" target="_blank" rel="noopener">here</a>.</p>
+				</div>
 
-					<div class="email_form">
-						<form id="email" name="emailform" action="https://formspree.io/xyykpapz" method="POST">
-						  <p id="form_title">Send me a message!</p>
-					      <label>Your name: <input required type="text" name="name"></label><br>
-					      <label>Your email: <input required type="email" name="_replyto"><br></label>
-					      <label>Message: <textarea required textarea rows="4" cols="30" name="message" placeholder="Write me a message..."></textarea></label>
-					      <input type="hidden" name="_subject" value="[Portfolio] New Message from your Website!"/>
-					      <br>
-					      <input type="submit" value="Submit">
-					      <input type="reset" value="Reset">
-					  </form>
-					</div>
+				<div class="email_form">
+					<form id="email" name="emailform" action="https://formspree.io/xyykpapz" method="POST">
+					  <p id="form_title">Send me a message!</p>
+				      <label>Your name: <input required type="text" name="name"></label><br>
+				      <label>Your email: <input required type="email" name="_replyto"><br></label>
+				      <label>Message: <textarea required textarea rows="4" cols="30" name="message" placeholder="Write me a message..."></textarea></label>
+				      <input type="hidden" name="_subject" value="[Portfolio] New Message from your Website!"/>
+				      <br>
+				      <input type="submit" value="Submit">
+				      <input type="reset" value="Reset">
+				  </form>
 				</div>
 	    <footer>
 				<div id="footer">
@@ -58,6 +58,7 @@
 					</div>
 				</div>
 	    </footer>
+	</div>
   </body>
 </html>
 
